--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
         Will you forgive me?
     </h1>
     <button      style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);" width="150" height="152">
-       <a href="YEs.html"> yes
+       <a href="YEs.html"> yes</a>
     </button>
-<button      style="display: block;margin: auto;cursor: heart;background-color: hsl(0, 0%, 90%);" width="150" height="152" <a href="redirect.html">
-        no
+<button      style="display: block;margin: auto;cursor: heart;background-color: hsl(0, 0%, 90%);" width="150" height="152"> 
+    <a href="redirect.html">no</a>
     </button>
 </body>
 
 </html>
+
