--- a/redirect.html
+++ b/redirect.html
@@ -11,12 +11,12 @@
     <h1 style="display: block;-webkit-user-select: none;margin:auto; align-self: baseline;cursor: crosshair;background-color: hsl(0, 0%, 90%);" width="150" height="152">
         Pleasee??????
     </h1>
-    <button      style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);" width="150" height="152"
-onclick="document.location='http://127.0.0.1:5500/YEs.html'">
-        yes
+    <button      style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);" width="150" height="152">
+        <a href="YEs.html">yes</a>
     </button>
-<button      style="display: block;margin: auto;cursor: heart;background-color: hsl(0, 0%, 90%);" width="150" height="152" onclick="document.location='http://127.0.0.1:5500/redirect.html'">
-        no
+<button      style="display: block;margin: auto;cursor: heart;background-color: hsl(0, 0%, 90%);" width="150" height="152" >
+    <a href="redirect.html">no</a>
     </button>
 </body>
+
 </html>
